# condo-fs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-07-condo-fuse.md
docs/superpowers/specs/: 2026-07-07-condo-fuse-design.md
packaging/: condo-fs.service  condo-fuse.service
src/: cache.rs  client.rs  config.rs  credentials.rs  fs.rs  lib.rs  model.rs  names.rs  vfs.rs
tests/: live_smoke.rs
tests/fixtures/: credentials.txt  files.json  folders.json
