[package]
name = "condo-fs"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[lib]
name = "condo_fs"
path = "src/lib.rs"

[[bin]]
name = "condo-fs"
path = "src/bin/condo-fs.rs"

[dependencies]
fuser = { version = "0.15", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "5"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
